Fix S&S and iframe/img overflow

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -106,3 +106,9 @@ hr {
   background-color: $border-color;
   border: 0;
 }
+
+img,
+iframe,
+*[width] {
+  max-width: 100%;
+}
