--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -19,9 +19,7 @@
   }
 
   a {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    word-wrap: break-word;
   }
 
   ul,
